<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">个人刷</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    
    <string name="title">CSWIPER API 3.0.3</string>
    <string name="CSwiperAppTitle">CSwiper API 3.0.3</string>
    
    <string name="enableSwipeButtonText">SWIPE</string> 
    <string name="getKsnButtonText">GET KSN</string>
    
    <string name="labelText">Card Data</string>
    <string name="formatIDLabelText">Format ID:</string>
    <string name="macLabelText">MAC:</string>
    <string name="masekdPANLabelText">Masked PAN:</string>
    <string name="expiryDateLabelText">Expiry Date:</string>
    <string name="ksnLabelText">KSN:</string>
    <string name="cardHolderLabelText">Card Holder Name:</string>
    <string name="track1LengthLabelText">Track1 Length:</string>
    <string name="track2LengthLabelText">Track2 Length:</string>
    <string name="track3LengthLabelText">Track3 Length:</string>
    <string name="randomNumberLabelText">Random Number:</string>
    <string name="encTracksLabelText">Encrypted Tracks:</string>
    <string name="tracksLabelText">Tracks:</string>
    
    <string name="GetKsnCompleted">Get KSN Completed</string>
    <string name="ReadingKsnData">Reading KSN&#8230;</string>
    <string name="DecodeCompleted">Decode Completed</string>
	<string name="ReadingCardData">Reading Card Data&#8230;</string>
	<string name="BadSwipe">Swipe Fail</string>
	<string name="CRCError">CRC Error</string>
	<string name="CommunicationError">Communication Error</string>
	<string name="UnknownDecodeError">Unknown Decode Error</string>
	<string name="Interrupted">Interrupted</string>
	<string name="Timeout">Timeout</string>
	<string name="WaitingCardSwipe">Waiting Card Swipe&#8230;</string>
	<string name="WaitingForDevice">Waiting For Device&#8230;</string>
	<string name="DecodingCardData">Decoding Card Data&#8230;</string>
	<string name="CSwiperPlugged">CSwiper is plugged</string>
	<string name="CSwiperUnplugged">CSwiper is unplugged!</string>
	<string name="STOP">STOP</string>
	<string name="CSwiperIsDetected">CSwiper is detected</string>
	<string name="CSwiperIsNotDetected">CSwiper is not detected!</string>
	<string name="Uploading">Uploading&#8230;</string>
	<string name="IncomingCallDetected">Incoming Call Detected</string>
	<string name="UploadCompleted">Send Log Completed</string>
	<string name="UploadFailed">Send Log Failed</string>
    
	<string name="CopyToClipboard">Copy to clipboard</string>
	<string name="SendLog">Send Log</string>
	<string name="FirmwareVersion">FirmwareVersion</string>
	<string name="BatteryVoltage">Battery Voltage</string>
	
</resources>