<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#cd7726"
    android:gravity="center|top"
    android:orientation="vertical"
    android:paddingTop="20sp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3sp"
        android:layout_marginRight="3sp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/enableSwipeButton"
            android:layout_width="0dp"
            android:layout_height="55sp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/enableSwipeButtonText" />

        <Button
            android:id="@+id/getKsnButton"
            android:layout_width="0dp"
            android:layout_height="55sp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/getKsnButtonText" />
    </LinearLayout>

    <LinearLayout
        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7sp"
        android:layout_marginRight="7sp"
        android:layout_marginTop="7sp"
        android:background="#eaece5"
        android:orientation="vertical"
        android:paddingBottom="20sp"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:paddingTop="20sp" >

        <TextView
            android:id="@+id/displayMsg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="10sp"
            android:textColor="#000000" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="7sp"
        android:layout_marginLeft="7sp"
        android:layout_marginRight="7sp"
        android:layout_marginTop="7sp"
        android:scrollbars="none" >

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#eaece5"
            android:paddingBottom="5sp"
            android:paddingLeft="5sp"
            android:paddingRight="5sp"
            android:paddingTop="5sp"
            android:stretchColumns="0,1" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isScrollContainer="true" >

                <TextView
                    android:id="@+id/tvDescKsn"
                    android:gravity="left"
                    android:padding="3dip"
                    android:text="@string/ksnLabelText"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/tvKsn"
                    android:layout_width="wrap_content"
                    android:gravity="left"
                    android:maxLines="1"
                    android:scrollbarAlwaysDrawVerticalTrack="true"
                    android:scrollbars="horizontal"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvDescFormatID"
                    android:gravity="left"
                    android:padding="3dip"
                    android:text="@string/formatIDLabelText"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/tvFormatID"
                    android:layout_width="wrap_content"
                    android:gravity="left"
                    android:padding="3dip"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isScrollContainer="true" >

                <TextView
                    android:id="@+id/tvDescEncTracks"
                    android:gravity="left"
                    android:padding="3dip"
                    android:text="@string/encTracksLabelText"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/tvEncTracks"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:scrollbarAlwaysDrawVerticalTrack="true"
                    android:scrollbars="vertical"
                    android:textColor="#000000"
                    android:width="0dip" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvDescTrack1Length"
                    android:gravity="left"
                    android:padding="3dip"
                    android:text="@string/track1LengthLabelText"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/tvTrack1Length"
                    android:layout_width="wrap_content"
                    android:gravity="left"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvDescTrack2Length"
                    android:gravity="left"
                    android:padding="3dip"
                    android:text="@string/track2LengthLabelText"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/tvTrack2Length"
                    android:layout_width="wrap_content"
                    android:gravity="left"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvDescTrack3Length"
                    android:gravity="left"
                    android:padding="3dip"
                    android:text="@string/track3LengthLabelText"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/tvTrack3Length"
                    android:layout_width="wrap_content"
                    android:gravity="left"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvDescRandomNumber"
                    android:gravity="left"
                    android:padding="3dip"
                    android:text="@string/randomNumberLabelText"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/tvRandomNumber"
                    android:layout_width="wrap_content"
                    android:gravity="left"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvDescMac"
                    android:gravity="left"
                    android:padding="3dip"
                    android:text="@string/macLabelText"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/tvMac"
                    android:layout_width="wrap_content"
                    android:gravity="left"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvDescMaskedPAN"
                    android:gravity="left"
                    android:padding="3dip"
                    android:text="@string/masekdPANLabelText"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/tvMaskedPAN"
                    android:layout_width="wrap_content"
                    android:gravity="left"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvDescExpiryDate"
                    android:gravity="left"
                    android:padding="3dip"
                    android:text="@string/expiryDateLabelText"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/tvExpiryDate"
                    android:layout_width="wrap_content"
                    android:gravity="left"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvDescCardHolderName"
                    android:gravity="left"
                    android:padding="3dip"
                    android:text="@string/cardHolderLabelText"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/tvCardHolderName"
                    android:layout_width="wrap_content"
                    android:gravity="left"
                    android:textColor="#000000" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>